# The-Dawning

./: .clang-format  .editorconfig  .env.example  .gitattributes  .gitignore  AGENT_COORDINATION.md  AGENT_HANDOFF_CLAUDE.md  AGENT_HANDOFF_CLAUDE_CLAIM.md  AGENT_HANDOFF_CODEX.md  CLAUDE.md  CMakeLists.txt  CONVERSATION_CONTEXT.md  DC_HANDOFF.md  README.md  SETUP_AND_BUILD.bat
.github/workflows/: ci.yml
assets/collision_sources/: frontier_courier_airlock_module.tdcollision.json  frontier_courier_boarding_vestibule.tdcollision.json  frontier_courier_cargo_module.tdcollision.json  frontier_courier_cockpit_module.tdcollision.json  frontier_courier_crew_module.tdcollision.json  frontier_courier_engineering_module.tdcollision.json  frontier_courier_exterior_hull.tdcollision.json  frontier_courier_main_corridor.tdcollision.json  reference_airlock.tdcollision.json  reference_cockpit.tdcollision.json  reference_hull.tdcollision.json
assets/manifests/: README.md  frontier_courier_mk1.design.tdasset.json  reference_ship.tdasset.json
assets/runtime/: README.md  corridor_section.tdmodel  frontier_courier_airlock_module.tdcollision  frontier_courier_boarding_vestibule.tdcollision  frontier_courier_cargo_module.tdcollision  frontier_courier_cockpit_module.tdcollision  frontier_courier_crew_module.tdcollision  frontier_courier_engineering_module.tdcollision  frontier_courier_exterior_hull.tdcollision  frontier_courier_hull_lods.tdmodel  frontier_courier_interior_lods.tdmodel  frontier_courier_main_corridor.tdcollision  frontier_courier_mk1.tdassembly  frontier_courier_mk1.tdcontent  reference_airlock.tdcollision  reference_cockpit.tdcollision  reference_hull.tdcollision  reference_ship.tdassembly  reference_ship.tdcontent
assets/textures/: README.md
docs/: ANALYSIS.md  CLAUDE_SESSION_LOG.md
docs/research/: ASSEMBLY_INSTANTIATION_TRANSACTION_CONTRACT_2026-07-21.md  ASSEMBLY_RESOURCE_CATALOG_LEASE_CONTRACT_2026-07-21.md  ASSEMBLY_RESOURCE_RESOLUTION_CONTRACT_2026-07-21.md  ASSET_PIPELINE_SPEC.md  ATMOSPHERIC_FLIGHT.md  AUTHORITATIVE_ASSEMBLY_ROOT_PRESENTATION_2026-07-21.md  CLAUDE_PUBLISHED_CHANGES_DEEP_DIVE_2026-07-20.md  CODEX_CLAUDE_INTEGRATION_REVIEW_2026-07-20.md  COOKED_ASSEMBLY_RUNTIME_CONTRACT_2026-07-21.md  FLIGHT_PHYSICS_DESIGN.md  FRONTIER_COURIER_RUNTIME_ACCEPTANCE_2026-07-22.md  FULL_3D_SPACE_SIM_ROADMAP.md  HIGH_FIDELITY_SHIP_INTERIORS_AND_COCKPITS_2026-07-22.md  IBL_DESIGN.md  INTERACTIVE_INTERIOR_RUNTIME_CONTRACT_2026-07-21.md  INTERIOR_COLLISION_AND_LOCOMOTION_CONTRACT_2026-07-21.md  INTERIOR_STATE_AND_LOCAL_LIGHTING_CONTRACT_2026-07-22.md  MASTER_ENGINE_SPEC.md  MESHY_PRODUCTION_INTERIORS_2026-07-21.md  MODERN_SPACE_SIM_CONTROLS_2026-07-21.md  MODULAR_ASSET_PRODUCTION_STANDARD_2026-07-22.md  PER_OBJECT_BUFFER_DESIGN.md  PHYSICS_RESEARCH_MATERIAL.md  PHYSICS_RESEARCH_REFERENCE.md  PILOT_SEAT_POSSESSION_AND_SHIP_ROOT_BOUNDARY_2026-07-21.md  PRODUCTION_ASSET_WAVE1_2026-07-22.md  README.md  README_FOR_CODEX.md  RELATIVISTIC_SIM_ARCHITECTURE.md  REPOSITORY_DEEP_AUDIT_2026-07-22.md  RUNTIME_CONTENT_ASSEMBLY_CONTRACT_2026-07-21.md  RUNTIME_INTEGRATION_AUDIT_2026-07-21.md  SHADOW_CASCADE_DESIGN.md  STATEFUL_INTERIOR_BLOCKERS_AND_ON_FOOT_CONTROLLER_2026-07-21.md  TheDawning_Batch1_D3D12_Rendering_Deep_Dive.md  TheDawning_Batch1_Orbital_Mechanics_Deep_Dive.md  TheDawning_Batch1_Physics_Collision_Deep_Dive.md  TheDawning_Batch1_Ship_Flight_Model_Deep_Dive.md  TheDawning_Batch2_Audio_Engine_Deep_Dive.md  TheDawning_Batch2_Combat_System_Deep_Dive.md  (+18 more)
shaders/: atmosphere_ps.hlsl  atmosphere_vs.hlsl  basic_ps.hlsl  basic_vs.hlsl  billboard_ps.hlsl  billboard_vs.hlsl  bloom_blur_ps.hlsl  bloom_common.hlsli  bloom_prefilter_ps.hlsl  bloom_vs.hlsl  brdf_common.hlsli  display_common.hlsli  gpu_draw_records.hlsli  hud_ps.hlsl  hud_vs.hlsl  ibl_common.hlsli  ibl_consume_probe.hlsli  ibl_environment.hlsli  ibl_eval_probe_ps.hlsl  ibl_prefilter_ps.hlsl  ibl_probe_ps.hlsl  line_ps.hlsl  line_vs.hlsl  overlay_ps.hlsl  overlay_vs.hlsl  path_trace.hlsl  planet_height_probe_ps.hlsl  planet_noise.hlsli  planet_ps.hlsl  planet_vs.hlsl  shadow_vs.hlsl  sky_common.hlsli  sky_ps.hlsl  sky_vs.hlsl  space_ps.hlsl  ssao_ps.hlsl  terrain_vs.hlsl  tonemap_ps.hlsl  tonemap_vs.hlsl
src/: app.cpp  app.h  main.cpp
src/asset/: assembly_resource_catalog.cpp  assembly_resource_catalog.h  assembly_resource_resolver.cpp  assembly_resource_resolver.h  cooked_assembly.cpp  cooked_assembly.h  cooked_collision.cpp  cooked_collision.h  cooked_model.cpp  cooked_model.h  gltf_importer.cpp  gltf_importer.h  model_data.h  runtime_content_manifest.cpp  runtime_content_manifest.h  source_snapshot.cpp  source_snapshot.h
src/core/: input.h  (+18 more)
tests/: test_assembly_collision_runtime.cpp  test_assembly_dynamic_collision_runtime.cpp  test_assembly_instantiator.cpp  test_assembly_interior_runtime.cpp  test_assembly_presentation.cpp  test_assembly_resource_catalog.cpp  test_assembly_resource_resolver.cpp  test_assembly_runtime_resources.cpp  test_asset_compiler.cpp  test_asset_manifest.py  test_atmosphere.cpp  test_atmosphere_system.cpp  test_collision.cpp  test_cooked_assembly.cpp  test_cooked_assembly.py  test_cooked_collision.cpp  test_cooked_collision.py  test_deferred_release.cpp  test_descriptor_allocator.cpp  test_docking.cpp  test_ecs.cpp  test_flight_control.cpp  test_framework.h  test_frontier_courier_pipeline.py  test_ftl.cpp  test_ftl_system.cpp  test_gltf_importer.cpp  test_gpu_draw_records.cpp  test_helix_carbine_component_plan.py  test_ibl_consume_probe.cpp  test_interior_lighting.cpp  test_interior_state.cpp  test_job_system.cpp  test_kepler.cpp  test_lambert.cpp  test_log.cpp  test_main.cpp  test_maneuver.cpp  test_math.cpp  test_meshy_client.py  (+33 more)
tools/: agent_overlap.ps1  agent_status.ps1  agent_worktree.ps1  assembly_inspector.cpp  asset_compiler.cpp  asset_inspector.cpp  claude.cmd  claude.ps1  collision_inspector.cpp  compile_asset_manifest.py  compile_collision_asset.py  generate_frontier_courier_collision.py  generate_frontier_courier_content.py  smoke_test.cmd  smoke_test.ps1  validate_asset_manifest.py
(+169 files in other folders)
